Made demo user experience more similar to landowner by making primary login and dashboard navigate to landowner dashboard, made it so demo users can view accounts but if they don't have access to the account they won't see a 'View Landowner Dashboard' button  (although didn't block routing for landowner-dashboard/:id to allow this to work), changed style to make sure that breadcrumb is visible when it's not a link and is just a span

--- a/Source/Rio.Web/src/scss/_custom-bootstrap.scss
+++ b/Source/Rio.Web/src/scss/_custom-bootstrap.scss
@@ -54,7 +54,8 @@ abbr[data-original-title] {
   color: $breadcrumb-item-active-color;
 }
 
-.breadcrumb-item a {
+.breadcrumb-item a,
+.breadcrumb-item span {
   color: $breadcrumb-item-color;
 }
 
